monitoring/monitor/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitor
  namespace: monitoring
  labels:
    app: monitor
  annotations:
    external-dns.alpha.kubernetes.io/hostname: monitor.sdpaks.equinor.com.
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - monitor.sdpaks.equinor.com
    secretName: monitor-tls
  rules:
    - host: monitor.sdpaks.equinor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: monitor
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitor-auth
  namespace: monitoring
  labels:
    app: monitor
spec:
  tls:
  - hosts:
    - monitor.sdpaks.equinor.com
    secretName: monitor-tls
  rules:
    - host: monitor.sdpaks.equinor.com
      http:
        paths:
          - path: /oauth2 
            backend:
              serviceName: oauth2-proxy-sdp
              servicePort: 4180
